--- a/F1App/F1App.WebUI/Views/JsonOptions/ShowPilotStandingOptions.cshtml
+++ b/F1App/F1App.WebUI/Views/JsonOptions/ShowPilotStandingOptions.cshtml
@@ -32,8 +32,8 @@
                         </div>
                     </div>
                     <div class="form-group col-xs-3">
-                        <label class="control-label col-xs-6" for="pilotStPilotNameDd">
-                            Standing Pilot Name
+                        <label class="control-label col-xs-6" for="pilotStPilotIdDd">
+                            Standing Pilot Id
                         </label>
                         <div class="col-xs-6">
                             @Html.DropDownListFor(m => m.PilotStPilotName, new SelectList(Model.PilotStPilotName), "All", new { @id = "pilotStPilotNameDd", @class = "Dd form-control", @column = 3, @withId = true })
