--- a/F1App/F1App.WebUI/Views/JsonOptions/ShowTeamOptions.cshtml
+++ b/F1App/F1App.WebUI/Views/JsonOptions/ShowTeamOptions.cshtml
@@ -27,16 +27,9 @@
                                 @Html.DropDownListFor(m => m.TeamsNationality, new SelectList(Model.TeamsNationality), "All", new { @id = "teamNatDd", @class = "Dd form-control", @column = 2, @withId = false })
                             </div>
                         </div>
-                        <div class="form-group col-xs-3">
-                            <label class="control-label col-xs-6" for="teamUrlDd">
-                                Team Url
-                            </label>
-                            <div class="col-xs-6">
-                                <select id="teamUrlId" class="Dd form-control" column="3" withid="false">
-                                    <option value="">All</option>
-                                </select>
-                            </div>
-                        </div>
+                    </div>
+                    <div class="col-lg-12 text-center" style="margin-top:10px">
+                        <button type="submit" class="btn btn-success" value="Generate json url">Generate json url</button>
                     </div>
                 }
             </div>
