--- a/F1App/F1App.WebUI/Views/List/TeamList.cshtml
+++ b/F1App/F1App.WebUI/Views/List/TeamList.cshtml
@@ -14,6 +14,7 @@
 <div id="Teams">
     <div class="panel panel-default">
         <div class="panel-heading">Teams</div>
+        <div class="panel-body">
             <table id="teamsTable" class="table table-striped table-bordered dt" cellspacing="0" width="100%">
                 <thead>
                     <tr>
@@ -31,7 +32,7 @@
                             <td>@t.TeamId</td>
                             <td>@t.TeamName</td>
                             <td>@t.TeamNationality</td>
-                            <td><a href=@t.TeamUrl>t.TeamUrl</a>@</td>
+                            <td><a href=@t.TeamUrl>@t.TeamUrl</a></td>
                             <td edit="false">
                                 @foreach(var p in @t.Pilots)
                                 {
